--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "pnpm build"
+  command = "pnpm install && pnpm db:generate && pnpm build"
   publish = ".next"
 
 [build.environment]
