--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-config-next": "14.0.4",
     "vitest": "^1.0.4",
     "@vitejs/plugin-react": "^4.2.0",
+    "@testing-library/react": "^13.4.0",
     "jsdom": "^23.0.1"
   }
 } 
