Fix Netlify API routes and add favicon - Remove custom redirects to let Next.js plugin handle API routes properly - Add favicon.svg and favicon.ico - Simplify Next.js config for Netlify compatibility

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,16 +7,7 @@
   NPM_FLAGS = "--version"
   PNPM_VERSION = "8"
 
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
+# Remove custom redirects - let Next.js plugin handle API routes
 [functions]
   directory = ".netlify/functions"
 
