Fix time framing and unsubscribe data - improve API with multiple endpoints and enhance UI with preset ranges

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,9 @@
   command = "pnpm install && pnpm db:generate && pnpm build"
   publish = ".next"
 
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
+
 [build.environment]
   NODE_VERSION = "18"
   NPM_FLAGS = "--version"
