--- a/package.json
+++ b/package.json
@@ -15,30 +15,32 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
     "@prisma/client": "^5.7.1",
-    "prisma": "^5.7.1",
-    "recharts": "^2.8.0",
-    "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.303.0",
+    "chart.js": "^4.4.9",
     "date-fns": "^3.0.6",
+    "lucide-react": "^0.303.0",
+    "next": "14.0.4",
+    "prisma": "^5.7.1",
+    "react": "^18",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "recharts": "^2.8.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@testing-library/react": "^13.4.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "vitest": "^1.0.4",
-    "@vitejs/plugin-react": "^4.2.0",
-    "@testing-library/react": "^13.4.0",
-    "jsdom": "^23.0.1"
+    "jsdom": "^23.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5",
+    "vitest": "^1.0.4"
   }
-} 
+}
