--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^20.19.0",
+    "@types/react": "^18.3.23",
+    "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.0.1",
