--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest",
-    "test:watch": "vitest --watch",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
@@ -17,9 +17,10 @@
   "dependencies": {
     "@prisma/client": "^5.7.1",
     "chart.js": "^4.4.9",
-    "date-fns": "^3.0.6",
-    "lucide-react": "^0.303.0",
-    "next": "14.0.4",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.294.0",
+    "next": "14.0.0",
+    "papaparse": "^5.5.3",
     "prisma": "^5.7.1",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
@@ -29,19 +30,21 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^13.4.0",
-    "@types/node": "^20.19.0",
-    "@types/react": "^18.3.23",
+    "@types/node": "^20",
+    "@types/papaparse": "^5.3.16",
+    "@types/react": "^18",
     "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "jsdom": "^23.0.1",
+    "eslint-config-next": "14.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5",
-    "vitest": "^1.0.4"
+    "typescript": "^5"
   }
 }
